--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: docker_env
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
-  - jupyterlab=4.5
-  - numpy=2.3
-  - pandas=2.3
+  - python=3.11
+  - conda-lock=>3.0.4
+  - altair
+  - pandas
